[gd_scene load_steps=4 format=3 uid="uid://dhdcph3m5v471"]

[ext_resource type="Script" path="res://addons/Wave_Function_Collapse/Plugin_controll/base_rule/Rule_base.gd" id="1"]

[sub_resource type="Image" id="Image_gmkxg"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="2"]
image = SubResource("Image_gmkxg")

[node name="Rule_base" type="Control"]
custom_minimum_size = Vector2(340, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 340.0
offset_bottom = 80.0
script = ExtResource("1")

[node name="Main" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.180392, 0.423529, 0.431373, 1)
layout_mode = 0
offset_right = 340.0
offset_bottom = 40.0

[node name="Id" type="Label" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 32.0
text = "10"

[node name="Name_label" type="Label" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 88.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 32.0
text = "Name"

[node name="ColorRect" type="ColorRect" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="Edit" type="Button" parent="Main"]
layout_mode = 0
offset_left = 231.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 32.0
text = "edit"
icon = SubResource("2")

[node name="Delete" type="Button" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 305.0
offset_top = 8.0
offset_right = 332.0
offset_bottom = 32.0
icon = SubResource("2")

[node name="special_show" type="CheckBox" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 199.0
offset_top = 8.0
offset_right = 223.0
offset_bottom = 32.0
disabled = true

[node name="Edit" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.180392, 0.423529, 0.431373, 1)
layout_mode = 0
offset_right = 340.0
offset_bottom = 88.0

[node name="Id_edit" type="Label" parent="Edit"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 32.0
text = "10"

[node name="Cancel" type="Button" parent="Edit"]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 72.0
offset_bottom = 72.0
text = "cancel"

[node name="Save" type="Button" parent="Edit"]
layout_mode = 0
offset_left = 264.0
offset_top = 48.0
offset_right = 329.0
offset_bottom = 79.0
text = "save"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Edit"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 6.0
offset_right = 66.0
offset_bottom = 36.0
icon_alignment = 1

[node name="TextEdit" type="LineEdit" parent="Edit"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 87.0
offset_top = 7.0
offset_right = 191.0
offset_bottom = 38.0

[node name="special" type="CheckBox" parent="Edit"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 192.0
offset_top = 8.0
offset_right = 339.0
offset_bottom = 39.0
tooltip_text = "if ticked won't connect side with same rule "
text = "special connect"

[connection signal="pressed" from="Main/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="Main/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Edit/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Edit/Save" to="." method="_on_Save_pressed"]
